Fix JDK 17 compatibility.